fixed uneven header

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -66,7 +66,7 @@ h6{
 }
 
 h1{
-	font-size: 2.5rem;
+	font-size: 1.5rem;
 }
 
 h2{
